search results in value

--- a/ui-assets/less/editor.less
+++ b/ui-assets/less/editor.less
@@ -103,6 +103,15 @@
     color: red;
    }
   }
+  .search {
+   position: absolute;
+   .drop-shadow(1px, 1px, 5px, 0.4);
+   padding: 1px 5px;
+   background: #fff;
+   div {
+    cursor: pointer;
+   }
+  }
   .property-value {
    vertical-align: top;
    display: inline-block;
