list item controls css fix

--- a/ui-assets/less/editor.less
+++ b/ui-assets/less/editor.less
@@ -180,6 +180,7 @@
       display: none;
       .drop-shadow(1px, 1px, 5px, 0.4);
       background: #fff;
+      z-index: 1000;
       i {
        padding: 0 5px;
        color: #333;
