--- a/ui-assets/less/editor.less
+++ b/ui-assets/less/editor.less
@@ -87,6 +87,8 @@
  font-size: 12px;
  //font-family: monospace;
  overflow-x: scroll;
+ background: #edeef0;
+ padding: 16px;
 
  .property.property-type-list {
   &:hover {
@@ -118,8 +120,18 @@
   }
  }
  .property.property-type-value {
-  .property-value {
-   margin: 2px 0;
+  >.property-value {
+   margin-bottom: 8px;
+   .drop-shadow(0,1px,2px,.1);
+   background: white;
+   >input {
+    padding: 16px;
+    height: auto;
+   }
+  }
+  >.property-name {
+   line-height: 18px;
+   padding: 16px;
   }
  }
  .property {
@@ -140,6 +152,7 @@
    float: right;
    z-index: 1000;
    position: relative;
+   text-transform: uppercase;
   }
   .search {
    position: absolute;
