--- a/ui-assets/less/editor.less
+++ b/ui-assets/less/editor.less
@@ -105,17 +105,19 @@
    cursor: default;
    display: inline-block;
    float: none;
-   text-decoration: underline;
+   //text-decoration: underline;
+   margin-top: 10px;
   }
   >.property-value {
    display: block;
    margin-top: -18px;
-   margin-left: 20px;
+   margin-left: 32px;
    >.list-controls {
     text-align: right;
     i {
      color: #999;
      cursor: pointer;
+     font-size: 18px;
      &:hover {
       color: #222;
      }
@@ -125,7 +127,8 @@
     .list-item {
      .list-item-controls-hover {
       i {
-       padding: 0 5px;
+       font-size: 19px;
+       padding: 5px;
        color: #999;
        cursor: pointer;
        &:hover {
@@ -134,7 +137,7 @@
       }
       position: relative;
       float: left;
-      margin-left: -20px;
+      margin-left: -32px;
       &:hover {
        .list-item-controls {
         display: block;
@@ -147,6 +150,8 @@
       .drop-shadow(1px, 1px, 5px, 0.4);
       background: #fff;
       z-index: 1000;
+      padding: 5px;
+      margin-top: -24px;
       i {
        padding: 0 5px;
        color: #333;
@@ -173,6 +178,13 @@
    >input {
     padding: 16px;
     height: auto;
+    color: rgba(0,0,0,0.88);
+    font-weight: 500;
+   }
+   >textarea {
+    padding: 16px;
+    color: rgba(0,0,0,0.88);
+    font-weight: 500;
    }
   }
   >.property-name {
@@ -181,7 +193,9 @@
   }
  }
  .property.property-type-oneof {
-  >.property-value {
+  >.property-name {
+   line-height: 18px;
+   padding: 8px 20px 8px 0px;
   }
  }
  .property {
@@ -235,19 +249,20 @@
    }
   }
   .oneof-controls { //For both one of property and list items
+   margin-bottom: 8px;
+   .drop-shadow(0,1px,2px,.1);
    select {
     cursor: pointer;
-    font-family: monospace;
     line-height: 18px;
-    height: 18px;
-    font-size: 12px;
+    height: auto;
+    padding: 8px;
+    font-size: 14px;
     margin: 0;
     border: none;
     outline: none;
-    padding: 0;
-    font-style: italic;
     color: #999;
     font-weight: bold;
+    width: 100% !important;
    }
   }
  }
