--- a/ui-assets/less/editor.less
+++ b/ui-assets/less/editor.less
@@ -221,11 +221,15 @@
   .search {
    position: absolute;
    .drop-shadow(1px, 1px, 5px, 0.4);
-   padding: 1px 5px;
+   padding: 0;
    background: #fff;
-   z-index: 1000;
+   z-index: 1001;
    div {
     cursor: pointer;
+    padding: 5px;
+    &:hover {
+     background: #eee;
+    }
    }
   }
   >.property-value {
