--- a/ui-assets/less/editor.less
+++ b/ui-assets/less/editor.less
@@ -88,6 +88,9 @@
  padding: 16px;
 
  .property.property-type-list {
+  padding-bottom: 5px;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+  margin-bottom: 5px;
   &:hover {
    >.property-name {
     display: inline-block;
