no border + fix

--- a/ui-assets/less/editor-nice.less
+++ b/ui-assets/less/editor-nice.less
@@ -89,7 +89,7 @@
 
  .property.property-type-list {
   padding-bottom: 5px;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+  //border-bottom: 1px solid rgba(0, 0, 0, 0.2);
   margin-bottom: 5px;
   &:hover {
    >.property-name {
@@ -203,6 +203,7 @@
  }
  .property {
   white-space: nowrap;
+  position: relative;
   &:hover {
    >.property-name {
     display: block;
