--- a/ui-assets/less/editor.less
+++ b/ui-assets/less/editor.less
@@ -242,7 +242,7 @@
    .value {
     width: 100% !important;
     resize: none;
-    background: #f8f8f8;
+    //background: #f8f8f8;
     //font-family: monospace;
     line-height: 18px;
     height: 18px;
