--- a/ui-assets/less/editor.less
+++ b/ui-assets/less/editor.less
@@ -87,7 +87,7 @@
  background: #edeef0;
  padding: 16px;
 
- .property.property-type-list {
+ .property.property-type-list, .property.property-type-map {
   padding-bottom: 5px;
   //border-bottom: 1px solid rgba(0, 0, 0, 0.2);
   margin-bottom: 5px;
